[package]
name = "papi"
version = "0.1.0"
authors = ["Clemens Lutz <lutzcle@cml.li>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
error-chain = "0.12.1"
libc = "~0.2"
papi-sys = { git = "https://github.com/LutzCle/papi-sys" }
serde = "~1.0.76"
serde_derive = "~1.0.79"
toml = "~0.4.7"
criterion = { version = "0.3", optional = true }
