[package]
name = "papi"
version = "0.1.0"
authors = ["Clemens Lutz <lutzcle@cml.li>"]

description = "A PAPI (Performance API) wrapper for Rust"
repository = "https://github.com/LutzCle/papi-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["hardware-counters", "performance-counters"]
categories = ["hardware-support", "development-tools::profiling", "api-bindings"]

edition = "2018"

[badges]
travis-ci = { repository = "LutzCle/papi-rs" }
maintenance = { status = "actively-developed" }

[dependencies]
error-chain = "0.12.1"
libc = "~0.2"
papi-sys = "~0.1"
serde = "~1.0.76"
serde_derive = "~1.0.79"
toml = "~0.4.7"
criterion = { version = "0.3", optional = true }
